--- a/initZarrStore_EasyOneArgoTSLite.ipynb
+++ b/initZarrStore_EasyOneArgoTSLite.ipynb
@@ -15,8 +15,7 @@
     "import gcsfs\n",
     "import json\n",
     "import numpy as np\n",
-    "import xarray as xrs\n",
-    "import matplotlib.pyplot as plt\n",
+    "import xarray as xr\n",
     "\n",
     "\n",
     "def get_gcs(path=None, asynchronous=True) -> gcsfs.core.GCSFileSystem:\n",
