--- a/03_initZarrStore_EOATSLite_Ravioli.ipynb
+++ b/03_initZarrStore_EOATSLite_Ravioli.ipynb
@@ -16,26 +16,9 @@
     "import json\n",
     "import numpy as np\n",
     "import xarray as xr\n",
+    "import utils_EOATS as util\n",
     "\n",
-    "\n",
-    "def get_gcs(path=None, asynchronous=True) -> gcsfs.core.GCSFileSystem:\n",
-    "    #with open('/home/jovyan/pangeo-181919-e7bc5bdaf4d5.json') as f:\n",
-    "    if not path:\n",
-    "        with open('pangeo-181919-e7bc5bdaf4d5.json') as f:\n",
-    "            token = json.load(f)\n",
-    "    elif path:\n",
-    "        with open(path) as f:\n",
-    "            token = json.load(f)\n",
-    "    return gcsfs.GCSFileSystem(token=token, asynchronous=asynchronous)\n",
-    "\n",
-    "\n",
-    "def iter_csv_paths(root):\n",
-    "    for dirpath, dirnames, filenames in os.walk(root):\n",
-    "        for fname in filenames:\n",
-    "            if fname.endswith(\".csv\"):\n",
-    "                yield os.path.join(dirpath, fname)\n",
     "                \n",
-    "\n",
     "def metadata_extraction(DATA_ROOT):\n",
     "        \n",
     "    lats = []\n",
@@ -44,7 +27,7 @@
     "    \n",
     "    start = datetime.now()\n",
     "    paths=[]\n",
-    "    for path in iter_csv_paths(DATA_ROOT):\n",
+    "    for path in util.iter_csv_paths(DATA_ROOT):\n",
     "        \n",
     "        lat = None\n",
     "        lon = None\n",
@@ -61,23 +44,26 @@
     "                    continue\n",
     "                \n",
     "                \n",
-    "                if line.startswith(b\"#profile_longitude \"):\n",
+    "                elif line.startswith(b\"#profile_longitude \"):\n",
     "                    lon = float(line[len(b\"#profile_longitude \"):].strip())\n",
     "                    continue\n",
     "    \n",
-    "                if line.startswith(b\"#profile_date \"):\n",
+    "                elif line.startswith(b\"#profile_date \"):\n",
     "                    date = line[len(b\"#profile_date \"):].strip().decode(\"ascii\")\n",
     "                    continue\n",
     "                    \n",
-    "                # skip other comment lines and the column header line\n",
-    "                if line.startswith(b\"#\") or line.startswith(b\"pressure \"):\n",
-    "                    continue\n",
-    "    \n",
+    "                # ✅ As soon as we have all three, stop reading this file\n",
+    "                if (lat is not None) and (lon is not None) and (date is not None):\n",
+    "                    break\n",
+    "\n",
+    "        if (lat is None) or (lon is None) or (date is None):\n",
+    "            raise ValueError(f\"Missing metadata in file: {path}\")\n",
+    "            \n",
     "        # store metadata\n",
     "        lats.append(lat)\n",
     "        lons.append(lon)\n",
     "        ts.append(date)\n",
-    "        paths.append(path)\n",
+    "        paths.append('/'.join(path.split('/')[-3:]))\n",
     "        \n",
     "        if len(paths) % 265000 == 0:\n",
     "            print(datetime.now() - start)\n",
@@ -85,31 +71,38 @@
     "    latitudes = np.array(lats, dtype=np.float32)\n",
     "    longitudes = np.array(lons, dtype=np.float32)\n",
     "    times = np.array(ts, dtype=\"datetime64[ns]\")\n",
-    "    \n",
     "    OUT_DIR = Path(\"/home/jovyan/EasyOneArgoTSLite/derived\")\n",
     "    OUT_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "    np.save(OUT_DIR / \"latitudes.npy\", latitudes)\n",
     "    np.save(OUT_DIR / \"longitudes.npy\", longitudes)\n",
     "    np.save(OUT_DIR / \"times.npy\", times)\n",
+    "    try:\n",
+    "        np.save(OUT_DIR / \"paths.npy\", np.array(paths, dtype=\"U\"))\n",
+    "    except Exception as e:\n",
+    "        print(\"Returning list 'paths'. Save failed:\", e)\n",
+    "        return paths\n",
     "    \n",
     "    print(\"Saved to\", OUT_DIR)\n",
-    "    return None\n",
-    "\n",
-    "\n",
-    "def initialize_EasyOneArgoTSLitedataset(outfile, N_profiles, N_plevels, lat_, lon_, time_, paths_) -> fsspec.mapping.FSMap:\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7c02157a-74a0-429a-a7cd-79aeff8d4f57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_EasyOneArgoTSLitedataset_RavioliChunks(outfile, lat_, lon_, time_, paths_) -> fsspec.mapping.FSMap:\n",
     "    \n",
     "    \"\"\"\n",
     "    Save Pressure/T/S/Pressure_error/T_error/S_error for each location's pressurelevels\n",
     "    \"\"\"\n",
-    "    \n",
-    "    if not lat_.size == lon_.size == time_.size == N_profiles:\n",
+    "    N_profiles = lat_.size\n",
+    "    if not lon_.size == time_.size == N_profiles:\n",
     "        raise ValueError(\"Number of profiles should be equal to number of coordinates\")\n",
-    "    \n",
-    "    temperature_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
-    "    salinity_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
-    "    pressure_error_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
-    "    temperature_error_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
-    "    salinity_error_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
+    "    print(\"N_profiles:\", N_profiles)\n",
     "    \n",
     "    pressure_ = np.array([\n",
     "        2.00e+00, 5.00e+00, 1.00e+01, 1.50e+01, 2.00e+01, 2.50e+01, 3.00e+01, 3.50e+01,\n",
@@ -127,6 +120,14 @@
     "        4.00e+03, 4.20e+03, 4.40e+03, 4.60e+03, 4.80e+03, 5.00e+03, 5.20e+03, 5.40e+03,\n",
     "        5.60e+03, 5.80e+03, 6.00e+03\n",
     "    ])\n",
+    "    N_plevels = pressure_.size\n",
+    "    print(\"N_plevels:\", N_plevels)\n",
+    "    \n",
+    "    temperature_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
+    "    salinity_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
+    "    pressure_error_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
+    "    temperature_error_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
+    "    salinity_error_ = da.empty(shape=(N_profiles, N_plevels), chunks=(N_profiles,1), dtype=np.float32)\n",
     "    \n",
     "    ds = xr.Dataset(\n",
     "        data_vars=dict(\n",
@@ -136,13 +137,13 @@
     "            temperature_error =([\"profilelocation_index\", \"pressure\"], temperature_error_),\n",
     "            salinity_error = ([\"profilelocation_index\", \"pressure\"], salinity_error_),\n",
     "            paths =  ([\"profilelocation_index\"], paths_),\n",
+    "            latitude = ( [\"profilelocation_index\"], lat_),\n",
+    "            longitude = ( [\"profilelocation_index\"], lon_ ),\n",
+    "            time = ( [\"profilelocation_index\"], time_),\n",
     "        ),\n",
     "        coords=dict(\n",
     "            profilelocation_index = ( [\"profilelocation_index\"], np.arange(N_profiles) ),\n",
     "            pressure = ([\"pressure\"], pressure_ ),\n",
-    "            latitude = ( [\"latitude\"], lat_),\n",
-    "            longitude = ( [\"longitude\"], lon_ ),\n",
-    "            time = ( [\"time\"], time_),\n",
     "        ),\n",
     "        attrs=dict(\n",
     "            description = \"EasyOneArgoTSLite 2025-10 version's variables, stored as (profile, pressure)\",\n",
@@ -173,10 +174,10 @@
     "    ds.paths.attrs[\"standard_name\"] = 'EasyOneArgoTSLite_filename'\n",
     "    \n",
     "    \n",
-    "    target_mapper = get_gcs().get_mapper(outfile)\n",
+    "    target_mapper = util.get_gcs().get_mapper(outfile)\n",
     "    \n",
-    "    ds.chunk(\n",
-    "        {'profilelocation_index': N_profiles, 'pressure': 1, 'latitude': N_profiles, 'longitude': N_profiles, 'time': N_profiles,}\n",
+    "    target_writer = ds.chunk(\n",
+    "        {'profilelocation_index': 125_000, 'pressure': N_plevels}\n",
     "    ).to_zarr(\n",
     "        target_mapper, \n",
     "        mode=\"w\",\n",
@@ -186,7 +187,7 @@
     "\n",
     "    print(' Empty grid initialized:  '+outfile, end='') \n",
     "        \n",
-    "    return target_mapper"
+    "    return target_writer"
    ]
   },
   {
@@ -196,14 +197,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_profiles= 2651968\n",
-    "N_plevels = 107\n",
     "DATA_ROOT = Path(\"/home/jovyan/EasyOneArgoTSLite/EasyOneArgoTSLite_20251015T172450Z/data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0381e91c-87e2-4469-8e12-03c86168b250",
    "metadata": {
     "scrolled": true
@@ -213,23 +212,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:16:35.603348\n",
-      "0:33:41.822529\n",
-      "0:50:06.055093\n",
-      "1:07:19.345789\n",
-      "1:22:12.782147\n",
-      "1:37:22.202089\n",
-      "1:53:04.071961\n",
-      "2:07:15.645408\n",
-      "2:21:48.720421\n",
-      "2:36:28.940098\n"
+      "0:06:53.257887\n",
+      "0:13:47.107261\n",
+      "0:20:35.830441\n",
+      "0:27:38.880952\n",
+      "0:43:34.765676\n",
+      "0:50:09.559780\n",
+      "0:56:56.736362\n",
+      "1:11:38.408050\n",
+      "1:18:58.146944\n",
+      "1:26:07.063488\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_966/678110933.py:50: UserWarning: no explicit representation of timezones available for np.datetime64\n",
+      "/tmp/ipykernel_1322/2100988327.py:64: UserWarning: no explicit representation of timezones available for np.datetime64\n",
       "  times = np.array(ts, dtype=\"datetime64[ns]\")\n"
      ]
     },
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "4f119477-9989-46b0-bbad-8c3c5c796310",
    "metadata": {},
    "outputs": [],
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "715f8d03-aa78-40d8-9367-358a472c8cb3",
    "metadata": {},
    "outputs": [],
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "1bb5ff99-66ae-4b5c-bc3b-c805fc782be2",
    "metadata": {},
    "outputs": [],
@@ -285,35 +284,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7c85830d-1cde-4c7b-8c2f-71a97dd4ac04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gcs = get_gcs(path=None, asynchronous=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "ed2300bd-bc6e-4234-99f6-b73c7799c5bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = 'pangeo-argo-eke/data/EasyOneArgoTSLite_v0'"
+    "outfile = 'pangeo-argo-eke/data/EasyOneArgoTSLite_v01'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
+   "id": "7c85830d-1cde-4c7b-8c2f-71a97dd4ac04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs = util.get_gcs(path=None, asynchronous=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "8d6f64d0-54cd-4e11-a7b8-2b7cf48300fc",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_profiles: 2651963\n",
+      "N_plevels: 107\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/srv/conda/envs/notebook/lib/python3.12/site-packages/zarr/core/dtype/npy/string.py:248: UnstableSpecificationWarning: The data type (FixedLengthUTF32(length=37, endianness='little')) does not have a Zarr V3 specification. That means that the representation of arrays saved with this data type may change without warning in a future version of Zarr Python. Arrays stored with this data type may be unreadable by other Zarr libraries. Use this data type at your own risk! Check https://github.com/zarr-developers/zarr-extensions/tree/main/data-types for the status of data type specifications for Zarr V3.\n",
+      "/srv/conda/envs/notebook/lib/python3.12/site-packages/zarr/core/dtype/npy/string.py:248: UnstableSpecificationWarning: The data type (FixedLengthUTF32(length=41, endianness='little')) does not have a Zarr V3 specification. That means that the representation of arrays saved with this data type may change without warning in a future version of Zarr Python. Arrays stored with this data type may be unreadable by other Zarr libraries. Use this data type at your own risk! Check https://github.com/zarr-developers/zarr-extensions/tree/main/data-types for the status of data type specifications for Zarr V3.\n",
       "  v3_unstable_dtype_warning(self)\n",
       "/srv/conda/envs/notebook/lib/python3.12/site-packages/zarr/api/asynchronous.py:244: ZarrUserWarning: Consolidated metadata is currently not part in the Zarr format 3 specification. It may not be supported by other zarr implementations and may change in the future.\n",
       "  warnings.warn(\n"
@@ -323,14 +330,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Empty grid initialized:  pangeo-argo-eke/data/EasyOneArgoTSLite_v0CPU times: user 817 ms, sys: 154 ms, total: 971 ms\n",
-      "Wall time: 35.6 s\n"
+      " Empty grid initialized:  pangeo-argo-eke/data/EasyOneArgoTSLite_v01CPU times: user 630 ms, sys: 811 ms, total: 1.44 s\n",
+      "Wall time: 28 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "target_mapper = initialize_EasyOneArgoTSLitedataset(outfile, N_profiles, N_plevels, latitudes, lon_180180, time_days, paths)"
+    "target_writer = initialize_EasyOneArgoTSLitedataset_RavioliChunks(outfile, latitudes, lon_180180, time_days, paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "baa86112-eb6c-46bf-adb5-2178a04eb158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "51ec4c7d-4989-4795-9b77-ffeb0fef4c91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.89 s, sys: 3.45 s, total: 10.3 s\n",
+      "Wall time: 16.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "_ = dask.compute(target_writer)"
    ]
   }
  ],
@@ -350,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
