--- a/01_download_extract_EOATSLite.ipynb
+++ b/01_download_extract_EOATSLite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "7068e872-a763-4c29-9b7d-4deae54a4779",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "93a49645-3aae-41a9-b82b-805fa1e426ea",
    "metadata": {},
    "outputs": [],
@@ -24,25 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "191df4d4-9e8e-4c2e-b970-74a5dc11b58f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DOWNLOAD_URL = \"https://www.seanoe.org/data/00961/107233/data/123027.tar.gz\"  # e.g. \"https://www.seanoe.org/.../123025...\"\n",
-    "\n",
+    "DOWNLOAD_URL = \"https://www.seanoe.org/data/00961/107233/data/123027.tar.gz\" \n",
     "ZIP_PATH = DATA_DIR / \"EasyOneArgoTSLite.zip\"\n",
-    "\n",
-    "#(no full file in memory)\n",
     "import math\n",
     "def download_file(url, dest):\n",
     "    print(f\"Downloading {url} -> {dest}\")\n",
     "    with requests.get(url, stream=True) as r:\n",
     "        r.raise_for_status()\n",
     "        total = int(r.headers.get(\"Content-Length\", 0))\n",
-    "        chunk_size = 1024 * 1024  # 1 MB\n",
+    "        chunk_size = 1024 * 1024 \n",
     "        n_chunks = math.ceil(total / chunk_size) if total else None\n",
-    "\n",
     "        with open(dest, \"wb\") as f:\n",
     "            for i, chunk in enumerate(r.iter_content(chunk_size=chunk_size), start=1):\n",
     "                if chunk:\n",
@@ -220,27 +216,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e23698e2-5292-49d8-97e8-7c19a0990bea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/jovyan/EasyOneArgoTSLite/EasyOneArgoTSLite.zip')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ZIP_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "id": "0ed6db40-2e33-4c6e-a2c4-b23c9bd43042",
    "metadata": {},
@@ -295,7 +270,7 @@
     "import tarfile\n",
     "from pathlib import Path\n",
     "\n",
-    "ARCHIVE_PATH = Path(\"/home/jovyan/EasyOneArgoTSLite/EasyOneArgoTSLite.zip\")  # drop .zip for now\n",
+    "ARCHIVE_PATH = Path(\"/home/jovyan/EasyOneArgoTSLite/EasyOneArgoTSLite.zip\")\n",
     "\n",
     "def extract_archive(path, out_dir):\n",
     "    path = Path(path)\n",
@@ -332,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
