--- a/04_EOATSLite_Spaghetti.ipynb
+++ b/04_EOATSLite_Spaghetti.ipynb
@@ -23,15 +23,11 @@
    "source": [
     "def data_extraction_all_levels(DATA_ROOT, OUT_DIR, pres, keep_indices=None, chunk_size=125_000, chunk_index=None):\n",
     "    \"\"\"\n",
-    "    Extract T, S, and error fields for multiple pressure levels in one pass.\n",
-    "\n",
+    "    Extract T, S, and error for all pressurelevels in one pass.\n",
     "    pres: 1D array of all standard pressure levels (root[\"pressure\"][:])\n",
-    "    keep_indices: iterable of indices into pres you want to keep (e.g. range(0, 88))\n",
     "    \"\"\"\n",
     "    OUT_DIR = Path(OUT_DIR)\n",
     "    OUT_DIR.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "    # Load paths in the *same order* as your Zarr \"paths\"\n",
     "    paths = np.load(OUT_DIR / \"paths.npy\")\n",
     "\n",
     "    if keep_indices is None:\n",
@@ -40,30 +36,24 @@
     "    n_keep = keep_indices.size\n",
     "    print(\"n_keep:\", n_keep)\n",
     "\n",
-    "    # Allocate arrays: (profile, pressure_index)\n",
     "    temp_arr = np.full((chunk_size, n_keep), np.nan, dtype=np.float32)\n",
     "    sal_arr  = np.full((chunk_size, n_keep), np.nan, dtype=np.float32)\n",
     "    p_err_arr = np.full((chunk_size, n_keep), np.nan, dtype=np.float32)\n",
     "    t_err_arr = np.full((chunk_size, n_keep), np.nan, dtype=np.float32)\n",
     "    s_err_arr = np.full((chunk_size, n_keep), np.nan, dtype=np.float32)\n",
     "\n",
-    "    # Map rounded pressure value -> column index in the arrays\n",
-    "    # (rounding to be robust against tiny float differences)\n",
     "    pres_keep_vals = np.asarray(pres)[keep_indices]\n",
     "    p_to_col = {round(float(p), 5): j for j, p in enumerate(pres_keep_vals)}\n",
-    "    #print(\"p_to_col:\", p_to_col)\n",
-    "    \n",
     "    start = datetime.now()\n",
     "    DATA_ROOT = Path(DATA_ROOT)\n",
     "\n",
     "    for i, rel_path in enumerate(paths[chunk_size*chunk_index:chunk_size*(chunk_index+1)]):\n",
-    "        path = DATA_ROOT / rel_path  # adjust if paths are absolute already\n",
+    "        path = DATA_ROOT / rel_path \n",
     "\n",
     "        with open(path, \"rb\", buffering=1024 * 1024) as f:\n",
     "            for line in f:\n",
     "                if not line:\n",
     "                    continue\n",
-    "                # skip comments and header\n",
     "                if line.startswith(b\"#\") or line.startswith(b\"pressure \"):\n",
     "                    continue\n",
     "\n",
@@ -80,10 +70,7 @@
     "\n",
     "                j = p_to_col.get(p_line)\n",
     "                if j is None:\n",
-    "                    # pressure level we don't care about\n",
     "                    continue\n",
-    "\n",
-    "                # Fill arrays at (profile i, level j)\n",
     "                temp_arr[i, j] = util.safe_float(temp_b)\n",
     "                sal_arr[i, j]  = util.safe_float(sali_b)\n",
     "                p_err_arr[i, j] = util.safe_float(perr_b)\n",
@@ -93,8 +80,7 @@
     "            print(f\"i={chunk_size*chunk_index+i+1}, ({datetime.now()}): {datetime.now() - start}\", flush=True)\n",
     "        if (i + 1) == chunk_size:\n",
     "            break\n",
-    "        \n",
-    "    # Save arrays for later use (or write directly to Zarr if you prefer)\n",
+    "            \n",
     "    np.save(OUT_DIR / str(\"temp_arr_all_levels_chunk_\"+str(chunk_index)+\".npy\"), temp_arr)\n",
     "    np.save(OUT_DIR / str(\"sal_arr_all_levels_chunk_\"+str(chunk_index)+\".npy\"),  sal_arr)\n",
     "    np.save(OUT_DIR / str(\"p_err_arr_all_levels_chunk_\"+str(chunk_index)+\".npy\"), p_err_arr)\n",
@@ -227,7 +213,7 @@
    "id": "d3b9ed3b-a653-44e3-8214-c64f3dbb6c89",
    "metadata": {},
    "source": [
-    "## Rechunking:"
+    "# Rechunking:"
    ]
   },
   {
@@ -1532,14 +1518,6 @@
     "ds_rc = xr.open_zarr(new_store)\n",
     "ds_rc"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2988b797-2344-4bd8-b8dd-b910f435d186",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
